--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <body>
     <h1>Welcome!</h1>
     <p><a href="https://aur.archlinux.org">AUR</a></p>
-    <p><a href="https://drive.google.com/">Google Drive</a></p>
+    <p><a href="https://drive.google.com">Google Drive</a></p>
+    <p><a href="https://mail.google.com">Gmail</a></p>
+    <p><a href="https://reddit.com">Reddit</a></p>
     <p><a href="https://suckless.org">Suckless</a></p>
+    <p><a href="https://youtube.com">YouTube</a></p>
   </body>
 </html>
