--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body>
     <h1>Welcome!</h1>
     <p><a href="https://aur.archlinux.org">AUR</a></p>
+    <p><a href="https://github.com">GitHub</a></p>
     <p><a href="https://drive.google.com">Google Drive</a></p>
     <p><a href="https://mail.google.com">Gmail</a></p>
     <p><a href="https://reddit.com">Reddit</a></p>
