--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>Start Page</title>
   <body>
     <h1>Welcome!</h1>
     <p><a href="https://aur.archlinux.org">AUR</a></p>
@@ -8,6 +9,7 @@
     <p><a href="https://mail.google.com">Gmail</a></p>
     <p><a href="https://reddit.com">Reddit</a></p>
     <p><a href="https://suckless.org">Suckless</a></p>
+    <p><a href="https://https://store.steampowered.com/">Steam</a></p>
     <p><a href="https://youtube.com">YouTube</a></p>
   </body>
 </html>
