--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p><a href="https://mail.google.com">Gmail</a></p>
     <p><a href="https://reddit.com">Reddit</a></p>
     <p><a href="https://suckless.org">Suckless</a></p>
-    <p><a href="https://https://store.steampowered.com/">Steam</a></p>
+    <p><a href="https://store.steampowered.com/">Steam</a></p>
     <p><a href="https://youtube.com">YouTube</a></p>
   </body>
 </html>
