--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <title>Start Page</title>
+  <head>
+    <title>Start Page</title>
+  </head>
   <body>
     <h1>Welcome!</h1>
     <p><a href="https://aur.archlinux.org">AUR</a></p>
