--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Start Page</title>
   </head>
   <body>
+    <time>
     <h1>Welcome!</h1>
     <p><a href="https://aur.archlinux.org">AUR</a></p>
     <p><a href="https://github.com">GitHub</a></p>
