--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   </head>
   <body>
     <h1>Welcome!</h1>
+    <p><a href="https://archlinux.org">Arch Linux</a></p>
     <p><a href="https://aur.archlinux.org">AUR</a></p>
     <p><a href="https://discord.com/app">Discord</a></p>
     <p><a href="https://github.com">GitHub</a></p>
     <p><a href="https://drive.google.com">Google Drive</a></p>
     <p><a href="https://mail.google.com">Gmail</a></p>
     <p><a href="https://reddit.com">Reddit</a></p>
+    <p><a href="https://open.spotify.com">Spotify</a></p>
+    <p><a href="https://store.steampowered.com">Steam</a></p>
     <p><a href="https://suckless.org">Suckless</a></p>
-    <p><a href="https://store.steampowered.com/">Steam</a></p>
     <p><a href="https://youtube.com">YouTube</a></p>
   </body>
 </html>
