--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p><a href="https://store.steampowered.com">Steam</a></p>
     <p><a href="https://suckless.org">Suckless</a></p>
     <p><a href="https://youtube.com">YouTube</a></p>
+    <p><a href="https://music.youtube.com">YouTube Music</a></p>
   </body>
 </html>
